syntax = "proto3";

package io.harness.perpetualtask;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message PerpetualTaskClientContextDetails {
  map<string, string> task_client_params = 1;
  google.protobuf.Timestamp last_context_updated = 2;
}

// TODO: define what is needed to make a callback to the client entry-point
message PerpetualTaskClientEntrypoint {
  oneof entrypoints {
    HttpsPerpetualTaskClientEntrypoint https_entrypoint = 1;
  }
}

message HttpsPerpetualTaskClientEntrypoint {
  string url = 1;
  oneof credentials {
    BasicAuthCredentials basic_auth_credentials = 2;
  }
}

message BasicAuthCredentials {
  string username = 1;
  string password = 2;
}